--- a/wpf_demo_phonebook/MainWindow.xaml
+++ b/wpf_demo_phonebook/MainWindow.xaml
@@ -7,42 +7,75 @@
         mc:Ignorable="d"
         Title="MainWindow" MinHeight="300" Width="800">
     <DockPanel>
+        <Menu DockPanel.Dock="Top">
+            <MenuItem Header="Load Data" Click="LoadData_Click"/>
+        </Menu>
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
             <ColumnDefinition/>
+            <ColumnDefinition/>
         </Grid.ColumnDefinitions>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-        </Grid.RowDefinitions>
+            <Grid Grid.Row="0" Grid.Column="0">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition/>
+                </Grid.RowDefinitions>
 
-        <StackPanel Grid.Row="0" Grid.Column="0" Orientation="Horizontal">
-            <TextBlock Text="Recherche : "/>
-            <TextBox x:Name="txtCriteria" HorizontalAlignment="Right" Width="150"/>
-        </StackPanel>
-        <TextBlock Grid.Row="1" Grid.Column="0" Text="Prénom : "/>
-        <TextBlock Grid.Row="2" Grid.Column="0" Text="Nom de famille : "/>
-        <TextBlock Grid.Row="3" Grid.Column="0" Text="Email : "/>
-        <TextBlock Grid.Row="4" Grid.Column="0" Text="Téléphone : "/>
-        <TextBlock Grid.Row="5" Grid.Column="0" Text="Celluaire : "/>
-        <TextBlock Grid.Row="7" Grid.Column="0" Text="Identifiant : "/>
+                <ListView Grid.Row="0" ItemsSource="{Binding Contacts}"
+                            SelectedItem="{Binding SelectedContact}"
+                            x:Name="lvContacts">
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding FirstName}"/>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
+            </Grid>
+            <Grid Grid.Row="0" Grid.Column="1">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
+                <StackPanel Grid.Row="0" Grid.Column="1" Orientation="Horizontal">
+                    <TextBlock Text="Recherche : "/>
+                    <TextBox x:Name="txtCriteria" HorizontalAlignment="Right" Width="150"/>
+                </StackPanel>
+                <TextBlock Grid.Row="1" Grid.Column="1" Text="Prénom : "/>
+                <TextBlock Grid.Row="2" Grid.Column="1" Text="Nom de famille : "/>
+                <TextBlock Grid.Row="3" Grid.Column="1" Text="Email : "/>
+                <TextBlock Grid.Row="4" Grid.Column="1" Text="Téléphone : "/>
+                <TextBlock Grid.Row="5" Grid.Column="1" Text="Celluaire : "/>
+                <TextBlock Grid.Row="7" Grid.Column="1" Text="Identifiant : "/>
 
-        <Button  Grid.Row="0" Grid.Column="1" Content="Recherche" 
+            </Grid>
+            <Grid Grid.Row="0" Grid.Column="2">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
+                <Button  Grid.Row="0" Grid.Column="2" Content="Recherche" 
                     Command="{Binding SearchContactCommand}" 
                     CommandParameter="{Binding ElementName=txtCriteria,Path=Text}" />
-        <TextBox Grid.Row="1" Grid.Column="1" Text="{Binding SelectedContact.FirstName}"/>
-        <TextBox Grid.Row="2" Grid.Column="1" Text="{Binding SelectedContact.LastName}"/>
-        <TextBox Grid.Row="3" Grid.Column="1" Text="{Binding SelectedContact.Email}"/>
-        <TextBox Grid.Row="4" Grid.Column="1" Text="{Binding SelectedContact.Phone}"/>
-        <TextBox Grid.Row="5" Grid.Column="1" Text="{Binding SelectedContact.Mobile}"/>
-        <TextBox Grid.Row="7" Grid.Column="1" Text="{Binding SelectedContact.ContactID}"/>
+                <TextBox Grid.Row="1" Grid.Column="2" Text="{Binding SelectedContact.FirstName}"/>
+                <TextBox Grid.Row="2" Grid.Column="2" Text="{Binding SelectedContact.LastName}"/>
+                <TextBox Grid.Row="3" Grid.Column="2" Text="{Binding SelectedContact.Email}"/>
+                <TextBox Grid.Row="4" Grid.Column="2" Text="{Binding SelectedContact.Phone}"/>
+                <TextBox Grid.Row="5" Grid.Column="2" Text="{Binding SelectedContact.Mobile}"/>
+                <TextBox Grid.Row="7" Grid.Column="2" Text="{Binding SelectedContact.ContactID}"/>
+            </Grid>
         </Grid>
     </DockPanel>
 </Window>
